Place word processor plugin installers under heading and fix spacing
Fixes #3147

--- a/chrome/skin/default/zotero/preferences.css
+++ b/chrome/skin/default/zotero/preferences.css
@@ -489,6 +489,15 @@ button {
 	margin-top: 10px;
 }
 
+#wordProcessorInstallers {
+	margin-block: 0.5em;
+}
+
+#wordProcessorInstallers > groupbox > label > h2 {
+	/* Override spacing added between groupboxes */
+	margin-top: 0.5em !important;
+}
+
 #styleManager
 {
 	height: 250px;
